# turboquant-kvcache

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
benchmarks/: synthetic_distortion.py
demos/: reference_demo.py  visual_report.py
docs/: benchmarks.md  method.md  pages.md  reproducibility.md  transformers.md
examples/: transformers_generate.py
scripts/: build_pages.py
src/turboquant_kvcache/: __init__.py  attention.py  kv_cache.py  quantizer.py
src/turboquant_kvcache/integrations/: __init__.py  transformers.py
tests/: test_quantizer.py  test_transformers_integration.py
